Add versioning for shared libraries
Adds versioning for shared libraries to avoid linking
with development version of shared library (.so).

Additionaly, it would let us introduce incompatible changes
to the API in a controlled way.

Signed-off-by: Damian Wrobel <dwrobel@ertelnet.rybnik.pl>
--
Summary: Add versioning for shared libraries
Type: Fix
Owner: Damian Wrobel
Test Plan: Unit Tests

--- a/media/client/main/CMakeLists.txt
+++ b/media/client/main/CMakeLists.txt
@@ -67,7 +67,8 @@ target_include_directories(
 set_target_properties(
         RialtoClient
         PROPERTIES LINK_FLAGS "-Wl,--unresolved-symbols=report-all"
-
+                   SOVERSION  ${PROJECT_VERSION_MAJOR}
+                   VERSION    ${CMAKE_PROJECT_VERSION}
         )
 
 target_link_libraries(
