Add options to disable compiling some components
Adds the following options to disable compilation of some
of the components:

  $ cmake -LH  2>&1| grep -B 1 ENABLE_
  // Enable building rialto client libraries
  ENABLE_CLIENT_LIBRARIES:BOOL=ON
  --
  // Enable building RialtoServer
  ENABLE_SERVER:BOOL=ON
  --
  // Enable building RialtoServerManagerSim
  ENABLE_SERVER_MANAGER:BOOL=ON

To keep backward compatibility all components are build
by default.

--
Summary: Add options to disable compiling some components
Type: feature
Owner: Damian Wrobel
Test Plan: None
Dependencies and Impacts: None

--- a/media/CMakeLists.txt
+++ b/media/CMakeLists.txt
@@ -24,5 +24,11 @@ include( CheckCXXCompilerFlag )
 
 add_subdirectory(public)
 add_subdirectory(common)
-add_subdirectory(client)
-add_subdirectory(server)
+
+if( ENABLE_CLIENT_LIBRARIES )
+    add_subdirectory(client)
+endif()
+
+if( ENABLE_SERVER )
+    add_subdirectory(server)
+endif()
